<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.DeleteUser">

    <ImageView
        android:id="@+id/imageDlogo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".25"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logosherig" />

    <TextView
        android:id="@+id/textDuser"
        android:layout_width="273dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/delete_usertitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDlogo" />

    <EditText
        android:id="@+id/editDelId"
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:drawableEnd="@drawable/ic_admin"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDuser" />

    <Button
        android:id="@+id/button"
        android:layout_width="129dp"
        android:layout_height="43dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/registerbuttonmainactivity"
        android:text="@string/deletebtn"
        android:textColor="@color/white"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDelId"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>