<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerUser">

    <ImageView
        android:id="@+id/imageRlogo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".25"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logosherig" />

    <TextView
        android:id="@+id/textView5"
        style="bold"
        android:layout_width="181dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/register_usertitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageRlogo" />

    <EditText
        android:id="@+id/edituId"
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/ic_admin"
        android:ems="10"
        android:hint="CID"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/edituEmail"
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:drawableEnd="@drawable/emailvector"
        android:ems="10"
        android:hint="@string/uemail"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edituId" />

    <EditText
        android:id="@+id/edituPword"
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/lockvector"
        android:ems="10"
        android:hint="@string/passwordU"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edituEmail" />

    <EditText
        android:id="@+id/edituCPword"
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:layout_marginTop="60dp"
        android:drawableEnd="@drawable/lockvector"
        android:ems="10"
        android:hint="CONFIRM PASSWORD"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edituEmail" />

    <EditText
        android:id="@+id/editstd"
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:layout_marginTop="18dp"
        android:drawableEnd="@drawable/child"
        android:ems="10"
        android:hint="CHILD NAME"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edituCPword" />

    <EditText
        android:id="@+id/editid"
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/child"
        android:ems="10"
        android:hint="STUDENT ID"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editstd" />

    <Button
        android:id="@+id/regbtn"
        android:layout_width="211dp"
        android:layout_height="47dp"
        android:background="@drawable/regbtn"
        android:text="@string/registerOpt"
        android:textColor="@color/white"
        app:backgroundTint="@color/teal_700"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editid"
        app:layout_constraintVertical_bias="0.267" />


</androidx.constraintlayout.widget.ConstraintLayout>