<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Teacher">


    <EditText
        android:id="@+id/teacheremail"
        android:layout_width="339dp"
        android:layout_height="57dp"
        android:layout_marginTop="48dp"
        android:drawableEnd="@drawable/emailvector"
        android:ems="10"
        android:hint="TeacherID"
        android:inputType="textPersonName"
        android:textColorHint="#7e7e7e"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/teacherlogin"
        android:layout_width="166dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/registerbuttonmainactivity"
        android:backgroundTint="@color/teal_700"
        android:text="@string/login_mainActivity"
        android:textColor="@color/white"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherPassword" />

    <Button
        android:id="@+id/teacherbutton"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/registerbuttonmainactivity"
        android:backgroundTint="@color/teal_700"
        android:text="Teacher"
        android:textColor="@color/white"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewteach" />

    <Button
        android:id="@+id/button4"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/registerbuttonmainactivity"
        android:backgroundTint="@color/teal_700"
        android:onClick="parent"
        android:text="Parent"
        android:textColor="@color/white"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/imageViewteach" />

    <EditText
        android:id="@+id/teacherPassword"
        android:layout_width="337dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/lockvector"
        android:ems="10"
        android:hint="@string/passwordMainActivity"
        android:inputType="textPassword"
        android:textColorHint="#7e7e7e"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacheremail" />

    <ImageView
        android:id="@+id/imageViewteach"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".25"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logosherig" />

    <TextView
        android:id="@+id/teacherforgot"
        android:layout_width="156dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_passwordMainActivity"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherlogin" />

</androidx.constraintlayout.widget.ConstraintLayout>